<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    app:startDestination="@id/menu_home">

    <fragment
        android:id="@+id/menu_home"
        android:name="com.example.e_culturetoolbakers.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/menu_search"
        android:name="com.example.e_culturetoolbakers.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/menu_settings"
        android:name="com.example.e_culturetoolbakers.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/menu_museumRegistration"
        android:name="com.example.e_culturetoolbakers.MuseumRegistrationFragment"
        android:label="@string/menu_museumRegistration"
        tools:layout="@layout/fragment_museum_registration" />
</navigation>