<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true"
    android:id="@+id/ScrollView">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrazioneMuseo">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"

        app:titleTextColor="@color/white"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        app:title="@string/registrazioneMuseo" />
    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:id="@+id/textView2"
        style="@android:style/TextAppearance.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrazioneMuseoTitle"
        android:layout_margin="15dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nomeMuseo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_margin="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:id="@+id/nomeMuseo2"
            android:hint="@string/nomeMuseo" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tipoMuseo"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/nomeMuseo"
        android:layout_margin="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/tipoMuseo" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/informazioniMuseo"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tipoMuseo"
        android:layout_margin="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/descrizioneMuseo" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/avanti"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/informazioniMuseo"
        app:layout_constraintVertical_bias="0.0"
        android:layout_margin="30dp"
        android:padding="15dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
