<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true"
    android:id="@+id/ScrollView">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InserisciZona">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            app:titleTextColor="@color/white"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/inserisciZona" />

    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:id="@+id/textView2"
        style="@android:style/TextAppearance.Material.DialogWindowTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inserisciZonaTitle"
        android:layout_margin="15dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nomeZona"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_margin="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/hintNomeZona" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/infoZona"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/nomeZona"
        android:layout_margin="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/hintDescrizioneZona" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/Relative"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@+id/infoZona">

        <ImageView
            android:id="@+id/fotoZona"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toTopOf="parent"></ImageView>


        <Button
            android:id="@+id/addFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fotoZona"
            android:layout_marginStart="10dp"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:text="@string/btnFotoZona"/>
    </RelativeLayout>

    <Button
        android:id="@+id/buttonConferma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginEnd="28dp"
        android:text="@string/conferma"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Relative"
        app:layout_constraintVertical_bias="0.0"
        android:padding="15dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>